<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/textShare"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/share"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:fontFamily="@font/proxima_nova_scosf_condensed_light"/>

    <ImageView
        android:id="@+id/iconMail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@null"
        android:src="@drawable/icon_mail"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        app:layout_constraintTop_toBottomOf="@id/textShare"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/textMail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/mail"
        android:textSize="16sp"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="@id/iconMail"
        app:layout_constraintStart_toEndOf="@id/iconMail"
        app:layout_constraintTop_toTopOf="@id/iconMail"
        android:fontFamily="@font/proxima_nova_alt_light"/>

    <ImageView
        android:id="@+id/iconDuo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@null"
        android:src="@drawable/icon_duo"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iconMail"/>

    <TextView
        android:id="@+id/textDuo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/duo"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:layout_marginStart="16dp"
        app:layout_constraintTop_toTopOf="@id/iconDuo"
        app:layout_constraintStart_toEndOf="@id/iconDuo"
        app:layout_constraintBottom_toBottomOf="@id/iconDuo"
        android:fontFamily="@font/proxima_nova_alt_light"/>

    <ImageView
        android:id="@+id/iconSms"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@null"
        android:src="@drawable/icon_sms"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iconDuo"/>

    <TextView
        android:id="@+id/textSms"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sms"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:layout_marginStart="16dp"
        app:layout_constraintTop_toTopOf="@id/iconSms"
        app:layout_constraintStart_toEndOf="@id/iconSms"
        app:layout_constraintBottom_toBottomOf="@id/iconSms"
        android:fontFamily="@font/proxima_nova_alt_light"/>

    <ImageView
        android:id="@+id/iconYouTube"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@null"
        android:src="@drawable/icon_youtube"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iconSms"/>

    <TextView
        android:id="@+id/textYoutube"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/youtube"
        android:textSize="16sp"
        android:textColor="@color/black"
        app:layout_constraintTop_toTopOf="@id/iconYouTube"
        android:fontFamily="@font/proxima_nova_alt_light"
        app:layout_constraintStart_toEndOf="@id/iconYouTube"
        app:layout_constraintBottom_toBottomOf="@+id/iconYouTube"/>

</androidx.constraintlayout.widget.ConstraintLayout>